[gd_scene load_steps=7 format=3 uid="uid://xsm8ktqo3llr"]

[ext_resource type="PackedScene" uid="uid://cvtvmnkc60bfr" path="res://scenes/hand.tscn" id="1_pareh"]
[ext_resource type="PackedScene" uid="uid://d1ela5g6cb4ho" path="res://scenes/card_pile.tscn" id="2_mumg8"]
[ext_resource type="PackedScene" uid="uid://dut3eu6qebkab" path="res://scenes/card.tscn" id="4_sewee"]
[ext_resource type="Script" path="res://scripts/CardManager.gd" id="4_vlltq"]
[ext_resource type="Resource" uid="uid://d22vqy36a1vdo" path="res://resources/decks/Deck1.tres" id="5_73mti"]
[ext_resource type="PackedScene" uid="uid://df6vfk4ig0egs" path="res://scenes/view_card_pile.tscn" id="6_frgt0"]

[node name="CardArea" type="Node2D"]

[node name="DeadCardHolder" type="Node2D" parent="."]

[node name="Hand" parent="." node_paths=PackedStringArray("dead_card_holder") instance=ExtResource("1_pareh")]
position = Vector2(887, 777)
dead_card_holder = NodePath("../DeadCardHolder")
HAND_WIDTH = 200

[node name="DrawPile" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_mumg8")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1666.0
offset_top = 768.0
offset_right = 1794.0
offset_bottom = 928.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
view = NodePath("../CanvasLayer/ViewCardPile")

[node name="DiscardPile" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_mumg8")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 769.0
offset_right = 115.0
offset_bottom = 929.0
grow_vertical = 0
scale = Vector2(2, 2)
view = NodePath("../CanvasLayer/ViewCardPile")

[node name="CardManager" type="Node" parent="." node_paths=PackedStringArray("deck", "hand", "discard")]
script = ExtResource("4_vlltq")
deck = NodePath("../DrawPile")
hand = NodePath("../Hand")
discard = NodePath("../DiscardPile")
card_scene = ExtResource("4_sewee")
persistent_deck = ExtResource("5_73mti")
starting_hand_size = 5

[node name="Button" type="Button" parent="."]
offset_left = 11.0
offset_top = 7.0
offset_right = 87.0
offset_bottom = 38.0
text = "add card"

[node name="Button2" type="Button" parent="."]
offset_left = 16.0
offset_top = 43.0
offset_right = 83.0
offset_bottom = 74.0
text = "remove"

[node name="PopDeck" type="Button" parent="."]
offset_left = 10.0
offset_top = 80.0
offset_right = 89.0
offset_bottom = 111.0
text = "pop deck"

[node name="NewHand" type="Button" parent="."]
offset_left = 6.0
offset_top = 117.0
offset_right = 91.0
offset_bottom = 148.0
text = "new hand"

[node name="DumpHand" type="Button" parent="."]
offset_top = 148.0
offset_right = 98.0
offset_bottom = 179.0
text = "dump hand"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ViewCardPile" parent="CanvasLayer" instance=ExtResource("6_frgt0")]
visible = false

[connection signal="gui_input" from="DrawPile" to="DrawPile" method="_on_gui_input"]
[connection signal="gui_input" from="DiscardPile" to="DiscardPile" method="_on_gui_input"]
[connection signal="pressed" from="PopDeck" to="CardManager" method="_on_pop_deck_pressed"]
[connection signal="pressed" from="NewHand" to="CardManager" method="_on_new_hand_pressed"]
[connection signal="pressed" from="DumpHand" to="CardManager" method="_on_dump_hand_pressed"]
